--- a/player.html
+++ b/player.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video Player</title>
     <link rel="stylesheet" href="player.css">
+    <link rel="icon" href="https://www.svgrepo.com/show/185930/play-button-movie.svg">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 
 </head>
